# rootkit

./: .gitignore
source/client/: CMakeLists.txt
source/client/include/: command_line.h  cracker.h  fsm.h  keylog.h  menu_options.h  rename.h  udp.h
source/client/src/: command_line.c  cracker.c  keylog.c  main.c  menu_options.c  rename.c  udp.c  utils.c
source/server/: CMakeLists.txt
source/server/include/: fsm.h  knocker.h  menu.h  udp.h
source/server/src/: command_line.c  fsm.c  knocker.c  main.c  menu.c  udp.c
